test/positive/big_package/Main.java
import util.Thing;
public class Main {
    public Main() {
    }

    public static void main() {
        Thing x = new Thing();
        Thing y = new Thing();
        util.doStuff("things");
    }
}
