test/negative/PackagePrivateMethods2.java
public class PackagePrivateMethods2 {
    public PackagePrivateMethods2() {}
    static void packagePrivate() {}
}
